compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__string_prefix_as_pattern_with_assertion.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  let assert \"a\" as a <> rest = \"wibble\"\n  a\n}"
---
----- SOURCE CODE
pub fn a(x) {
  let assert "a" as a <> rest = "wibble"
  a
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/1]).

-spec a(any()) -> binary().
a(X) ->
    case ~"wibble" of
        <<"a"/utf8, Rest/binary>> ->
            A = ~"a",
            A;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"a",
                line => 2,
                value => _value,
                start => 16,
                'end' => 54,
                pattern_start => 27,
                pattern_end => 43
            })
    end.
