compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__string_prefix_as_pattern_with_list.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x {\n    [\"a\" as a <> _, \"b\" as b <> _] -> a <> b\n    _ -> \"\"\n  }\n}"
---
----- SOURCE CODE
pub fn a(x) {
  case x {
    ["a" as a <> _, "b" as b <> _] -> a <> b
    _ -> ""
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/1]).

-spec a(list(binary())) -> binary().
a(X) ->
    case X of
        [<<"a"/utf8, _/binary>>, <<"b"/utf8, _/binary>>] ->
            A = ~"a",
            B = ~"b",
            <<A/binary, B/binary>>;

        _ ->
            ~""
    end.
