compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__string_prefix_as_pattern_with_multiple_subjects.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x, x {\n    _, \"a\" as a <> _  -> a\n    _, _ -> \"a\"\n  }\n}"
---
----- SOURCE CODE
pub fn a(x) {
  case x, x {
    _, "a" as a <> _  -> a
    _, _ -> "a"
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/1]).

-spec a(binary()) -> binary().
a(X) ->
    case {X, X} of
        {_, <<"a"/utf8, _/binary>>} ->
            A = ~"a",
            A;

        {_, _} ->
            ~"a"
    end.
